# render-engine-microblog

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml  publish.yml  static.yml  test.yml  tests.yaml
docs/: app.py
docs/static/: style.css
docs/templates/: _base.html  archive.html  index.html  page.html
render_engine_microblog/: __init__.py  collection.py  themes.py
render_engine_microblog/templates/: microblog.html  microblog_post.html
src/render_engine_microblog/: __init__.py  collection.py  themes.py
src/render_engine_microblog/templates/: microblog.html  microblog_post.html
tests/: conftest.py  test_collection.py  test_content_generation.py
