[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "render_engine_microblog"
dynamic = ["version"]
description = "Microblog Parser and Collection for Render Engine"
readme = "README.md"

dependencies = [
    "render-engine >= 2024.1.1a2",
    "jinja2",
    "render_engine_markdown",
]

[project.optional-dependencies]
    dev = [
        "pytest",
        "pytest-mock",
        "gazpacho",
        "pip-tools",
        "ruff",
    ]

[project.urls]
homepage = "https://github.com/kjaymiller/render_engine_microblog/"
repository = "https://github.com/kjaymiller/render_engine_microblog/"

[tool.setuptools_scm]
local_scheme = "no-local-version"
# version_scheme = "python-simplified-semver"

[tool.ruff]
select = ["E", "F", "I", "UP"]
target-version = "py311"
line-length = 120
src = ["src"]
ignore-init-module-imports = true
