[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "render_engine_microblog"
dynamic = ["version"]
description = "Microblog Parser and Collection for Render Engine"
readme = "README.md"


dependencies = [
    "render-engine >= 2024.1.1a2",
    "jinja2",
    "render_engine_markdown",
]

[project.optional-dependencies]
    dev = [
        "pytest",
        "pytest-cov",
        "gazpacho",
        "ruff",
    ]

[project.urls]
homepage = "https://github.com/kjaymiller/render_engine_microblog/"
repository = "https://github.com/kjaymiller/render_engine_microblog/"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.setup_tools.package-data]
"*" = ["*.html"]

[tool.ruff]
select = ["E", "F", "I", "UP"]
target-version = "py311"
line-length = 120
ignore-init-module-imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov"
testpaths = ["tests"]
pythonpath = ["src"]
